--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -2,11 +2,11 @@
 #Logger por defecto para toda la aplicación
 log4j.rootLogger=ERROR, stdout
 
-#log4j.logger.org.springframework=WARN, FileLog
-log4j.logger.org.springframework=WARN, stdout
-log4j.logger.org.springframework=WARN, stdout
+
+log4j.logger.org.springframework=TRACE, stdout
 log4j.logger.co.edu.udea.ludens=TRACE, stdout
-log4j.logger.javax.persistence=WARN,stdout
+log4j.logger.com.objectdb.jpa.Provider=TRACE, stdout
+log4j.logger.javax.persistence=TRACE,stdout
 
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
