Keeping in the figth!! Buscando los errores en el CRUDL.

--- a/Web/.settings/org.eclipse.core.resources.prefs
+++ b/Web/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
+#Fri Nov 09 15:56:01 COT 2012
 eclipse.preferences.version=1
 encoding//src/rebel.xml=UTF-8
-encoding/<project>=ISO-8859-1
+encoding/<project>=UTF-8
