Fixing some issues with the creation the DataBase tables using Hibernate.

--- a/Web/.settings/org.eclipse.core.resources.prefs
+++ b/Web/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Fri Nov 09 15:56:01 COT 2012
+#Wed Nov 14 16:06:11 COT 2012
 eclipse.preferences.version=1
 encoding//src/rebel.xml=UTF-8
-encoding/<project>=UTF-8
+encoding/<project>=ISO-8859-1
