--- a/Web/src/log4j.properties
+++ b/Web/src/log4j.properties
@@ -6,7 +6,7 @@ log4j.rootLogger=ERROR, stdout
 log4j.logger.org.springframework=ERROR, stdout
 log4j.logger.co.edu.udea.ludens=TRACE, stdout
 log4j.logger.com.objectdb.jpa.Provider=ERROR, stdout
-log4j.logger.javax.persistence=ERROR,stdout
+log4j.logger.org.springframework.orm.jpa.JpaTransactionManager=DEBUG,stdout
 
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
